--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
+    "luxon": "^3.4.4",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.7"
   }
